--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@types/express-session": "^1.18.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.16.0",
