--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
-    "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
+    "multer": "^2.0.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
@@ -28,7 +29,6 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-fileupload": "^1.5.2",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.3",
     "mysql": "^2.18.1",
