--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "ts-node-dev src/index.ts",
+    "typecheck": "tsc --noEmit",
+    "typecheck:watch": "tsc --noEmit --watch --preserveWatchOutput",
+    "dev:server": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "concurrently -k \"npm:dev:server\" \"npm:typecheck:watch\"",
     "start": "node dist/index.js"
   },
   "author": "",
@@ -18,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
+    "concurrently": "^9.2.1",
     "multer": "^2.0.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
